@@ -18,10 +18,21 @@
     </modules>
 
     <dependencies>
+        <!-- hystrix断路器 -->
         <dependency>
-            <groupId>com.jxin</groupId>
-            <artifactId>microservice-jxin-service-api-member</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>-Xms256m -Xmx256m -XX:PermSize=64m -XX:MaxPermSize=64m</jvmArguments>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
